--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
+body {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
 canvas {
     display: block;
     margin: auto;
-    margin-top: 24px;
 }
