--- a/style.css
+++ b/style.css
@@ -9,3 +9,11 @@ canvas {
     display: block;
     margin: auto;
 }
+
+button {
+    /* height: 48px; */
+    padding: 16px;
+    position: absolute;
+    bottom: 320px;
+    left: 50%;
+}
