--- a/style.css
+++ b/style.css
@@ -12,8 +12,16 @@ canvas {
 
 button {
     /* height: 48px; */
+    transform: translate(-50%,-50%);
     padding: 16px;
     position: absolute;
     bottom: 320px;
+    left: 50%;
+}
+
+p {
+    transform: translate(-50%,-50%);
+    position: absolute;
+    bottom: 80px;
     left: 50%;
 }
